# rmacs

./: README.md  flake.nix  pyproject.toml  requirements.txt
channel_switch.egg-info/: .dependency_links.txt.swp  PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
