[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channel-switch"
description = "Resilient Mesh Automatic Channel Selection"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true


[project.scripts]
channel-switch = "src.rmacs_manager:main"

[project.urls]
"Homepage" = "https://github.com/tiiuae/rmacs"


[tool.pip-tools]
generate-hashes = true
